# drive-vault

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: main.yml
drive_vault/: backup.py  cli.py  drive.py
tests/: test_backup.py
