[tool.poetry]
name = "drive-vault"
version = "0.1.0"
description = "Create backups of files and directories and save in google drive"
authors = ["Luiz Felipe de Castro Vilas Boas <luizfelipecastrovb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.119.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
