[tool.poetry]
name = "drive-vault"
version = "0.1.0"
description = "Create backups of files and directories and save in google drive"
authors = ["Luiz Felipe de Castro Vilas Boas <luizfelipecastrovb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.119.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
click = "^8.1.7"

[tool.poetry.scripts]
drive-vault = "drive_vault.cli:cli"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
